# ffx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/analytical/: 1_normalize.py  2_serialize.py  3_create_config.py  4_run_query.py  README.md  config.yaml  data_root.txt  ordering.txt  query.txt  run_query.py  setup_data.py
examples/semantic/: 1_normalize.py  2_serialize.py  3_create_config.py  3_create_minimal_config.py  4_run_query.py  README.md  config.yaml  data_root.txt  ordering.txt  query.txt  run_query.py  setup_data.py  table_config_minimal.txt
src/: query_eval_exec.cpp  table_serializer.cpp
src/alloc/: CMakeLists.txt  arena_allocator.cpp
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/flock/: CMakeLists.txt  README.md
src/flock/include/flock/core/: common.hpp  config.hpp
src/flock/include/flock/metrics/: manager.hpp  types.hpp
src/flock/include/flock/model_manager/: model.hpp  repository.hpp
src/flock/include/flock/model_manager/providers/adapters/: demo.hpp
src/flock/include/flock/prompt_manager/: prompt_manager.hpp  repository.hpp
src/flock/include/flock/secret_manager/: secret_manager.hpp
src/flock/model_manager/: model.cpp
src/flock/model_manager/providers/adapters/: azure.cpp  demo.cpp  openai.cpp
src/flock/prompt_manager/: prompt_manager.cpp
src/flock/secret_manager/: secret_manager.cpp
src/operator/: CMakeLists.txt  query_variable_to_vector.cpp
src/operator/ai_operator/: ai_base.cpp  ai_serializer.cpp  ftree_reconstructor.cpp  map.cpp
src/operator/factorized_ftree/: factorized_tree.cpp  factorized_tree_element.cpp  ftree_ancestor_finder.cpp  ftree_batch_iterator.cpp  ftree_iterator.cpp  ftree_state_update.cpp
src/operator/include/: ancestor_finder_utils.hpp  operator.hpp  operator_utils.hpp  query_variable_to_vector.hpp
src/operator/include/ai_operator/: ai_base.hpp  ai_serializer.hpp  ftree_reconstructor.hpp  map.hpp
src/operator/include/factorized_ftree/: factorized_tree.hpp  factorized_tree_element.hpp  ftree_ancestor_finder.hpp  ftree_batch_iterator.hpp  ftree_iterator.hpp  ftree_state_update.hpp
src/operator/include/join/: flat_join.hpp  flat_join_predicated.hpp  inljoin_packed.hpp  inljoin_packed_cascade.hpp  inljoin_packed_cascade_predicated.hpp  inljoin_packed_cascade_predicated_shared.hpp  inljoin_packed_cascade_shared.hpp  inljoin_packed_gp_cascade.hpp  inljoin_packed_gp_cascade_predicated.hpp  inljoin_packed_gp_cascade_predicated_shared.hpp  inljoin_packed_gp_cascade_shared.hpp  inljoin_packed_predicated.hpp  inljoin_packed_predicated_shared.hpp  inljoin_packed_shared.hpp  inljoin_unpacked.hpp  intersection.hpp  intersection_predicated.hpp  nway_intersection.hpp  nway_intersection_predicated.hpp  packed_anti_semi_join.hpp  packed_theta_join.hpp  property_filter.hpp
src/operator/include/predicate/: predicate_eval.hpp
src/operator/include/scan/: scan.hpp  scan_predicated.hpp  scan_synchronized.hpp  scan_synchronized_predicated.hpp  scan_unpacked.hpp  scan_unpacked_synchronized.hpp
src/operator/include/schema/: adj_list_manager.hpp  schema.hpp
src/operator/include/selection_cascade/: selection_cascade_fwd.hpp
src/operator/include/sink/: sink_export.hpp  sink_itr_merged.hpp  sink_linear.hpp  sink_min.hpp  sink_min_itr.hpp  sink_no_op.hpp  sink_packed.hpp  sink_unpacked.hpp
src/operator/include/vector/: bitmask.hpp  selection_vector.hpp  state.hpp  unpacked_state.hpp  unpacked_vector.hpp  vector.hpp
src/operator/join/: flat_join.cpp  flat_join_predicated.cpp  inljoin_packed.cpp  inljoin_packed_cascade.cpp  inljoin_packed_cascade_predicated.cpp  inljoin_packed_cascade_predicated_shared.cpp  inljoin_packed_cascade_shared.cpp  inljoin_packed_gp_cascade.cpp  inljoin_packed_gp_cascade_predicated.cpp  inljoin_packed_gp_cascade_predicated_shared.cpp  inljoin_packed_gp_cascade_shared.cpp  inljoin_packed_predicated.cpp  inljoin_packed_predicated_shared.cpp  inljoin_packed_shared.cpp  inljoin_unpacked.cpp  intersection.cpp  intersection_predicated.cpp  nway_intersection.cpp  nway_intersection_predicated.cpp  packed_anti_semi_join.cpp  packed_theta_join.cpp  property_filter.cpp
src/operator/scan/: scan.cpp  scan_predicated.cpp  scan_synchronized.cpp  scan_synchronized_predicated.cpp  scan_unpacked.cpp  scan_unpacked_synchronized.cpp
src/operator/schema/: adj_list_manager.cpp
src/operator/sink/: sink_export.cpp  sink_itr_merged.cpp  sink_linear.cpp  sink_min.cpp  sink_min_itr.cpp  sink_packed.cpp  sink_unpacked.cpp
src/operator/vector/: bitmask.cpp  data_chunk.hpp  selection_vector.cpp  state.cpp  unpacked_vector.cpp  vector.cpp
src/plan/: CMakeLists.txt  plan.cpp  plan_tree.cpp
src/query/: CMakeLists.txt  predicate_parser.cpp  query.cpp  query_rule_parser.cpp
src/ser_der/: CMakeLists.txt  serializer.cpp  table_metadata.cpp
src/table/: CMakeLists.txt  adj_list.cpp  adj_list_builder.cpp  ffx_str_t.cpp  string_dictionary.cpp  string_hash_table.cpp  string_pool.cpp  table.cpp  (+2 more)
tests/: adj_list_builder_tests.cpp  adj_list_manager_extended_tests.cpp  adj_list_manager_tests.cpp  bitmask_tests.cpp  cardinality_tests.cpp  cartesian_product_tests.cpp  column_serializer_tests.cpp  cycle_handling_tests.cpp  datalog_e2e_tests.cpp  datalog_mapping_tests.cpp  datalog_table_loading_tests.cpp  dictionary_pipeline_e2e_tests.cpp  edge_case_tests.cpp  ffx_str_t_tests.cpp  flat_join_intersection_tests.cpp  ftree_ancestor_finder_tests.cpp  ftree_batch_iterator_tests.cpp  index_creator_tests.cpp  iterator_tests.cpp  loaded_table_tests.cpp  mid_pipeline_llm_e2e_tests.cpp  operator_schema_lookup_tests.cpp  predicate_eval_string_tests.cpp  predicate_parser_tests.cpp  predicated_operators_tests.cpp  query_parser_tests.cpp  re2_like_tests.cpp  selection_vector_tests.cpp  ser_des_integration_tests.cpp  ser_des_str_tests.cpp  sink_min_partial_tests.cpp  sink_min_tests.cpp  sink_packed_tests.cpp  streaming_map_tests.cpp  string_dictionary_integration_tests.cpp  string_dictionary_mt_tests.cpp  string_dictionary_ser_tests.cpp  string_dictionary_tests.cpp  string_hash_table_tests.cpp  string_pool_tests.cpp  (+3 more)
(+67 files in other folders)
